--- a/recommendation_system.html
+++ b/recommendation_system.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Rest of your HTML content -->
+    <h1>Recommendation System</h1>
+    
+    <h2>User Ratings</h2>
+    <table id="userRatingsTable">
+        <!-- Table to display user-item ratings -->
+    </table>
+
+    <h2>Recommendations</h2>
+    <ul id="recommendationsList">
+        <!-- List to display recommendations -->
+    </ul>
+
+    <script src="recommendation_system.js"></script>
 </body>
 </html>
