--- a/services.html
+++ b/services.html
@@ -16,45 +16,30 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
+
     <main>
-        <section class="services">
+        <section>
             <div class="container">
-                <h2>Our Services</h2>
-                <div class="service">
-                    <h3>Service 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                </div>
-                <div class="service">
-                    <h3>Service 2</h3>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                </div>
-                <div class="service">
-                    <h3>Service 3</h3>
-                    <p>Phasellus volutpat, mi quis cursus lacinia, libero justo posuere urna, vel semper libero nunc eget nunc.</p>
-                </div>
-                <!-- Add more services as needed -->
+                <h2>What We Offer</h2>
+                <ul>
+                    <li>Web Design</li>
+                    <li>Graphic Design</li>
+                    <li>Digital Marketing</li>
+                    <li>Content Writing</li>
+                    <li>SEO Optimization</li>
+                </ul>
             </div>
         </section>
     </main>
-    
+
     <footer>
         <div class="container">
-            <p>&copy; 2024 The Best Website. All rights reserved.</p>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
+            <p>&copy; 2024 My Website. All rights reserved.</p>
         </div>
     </footer>
 </body>
