--- a/portfolio.html
+++ b/portfolio.html
@@ -16,32 +16,29 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
+
     <main>
-        <section class="portfolio">
+        <section>
             <div class="container">
-                <h2>Our Portfolio</h2>
-                <div class="portfolio-grid">
+                <h2>Our Work</h2>
+                <div class="portfolio">
                     <div class="portfolio-item">
-                        <img src="portfolio1.jpg" alt="Project 1">
+                        <img src="project1.jpg" alt="Project 1">
                         <h3>Project 1</h3>
                         <p>Description of Project 1</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="portfolio2.jpg" alt="Project 2">
+                        <img src="project2.jpg" alt="Project 2">
                         <h3>Project 2</h3>
                         <p>Description of Project 2</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="portfolio3.jpg" alt="Project 3">
+                        <img src="project3.jpg" alt="Project 3">
                         <h3>Project 3</h3>
                         <p>Description of Project 3</p>
                     </div>
@@ -50,16 +47,10 @@
             </div>
         </section>
     </main>
-    
+
     <footer>
         <div class="container">
-            <p>&copy; 2024 The Best Website. All rights reserved.</p>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
+            <p>&copy; 2024 My Website. All rights reserved.</p>
         </div>
     </footer>
 </body>
