--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
     </header>
 
     <main>
-        <section>
+        <section class="hero">
             <div class="container">
                 <h2>Welcome to Our Website</h2>
-                <p>This is the home page of our website. Feel free to explore!</p>
+                <p>Discover our amazing services and products that will transform your business.</p>
+                <a href="services.html" class="cta-button">Learn More</a>
             </div>
         </section>
+        
+        <!-- Other sections of the main content go here -->
     </main>
 
     <footer>
