--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Our Family Album</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to My Website</h1>
+            <h1>Welcome to Our Family Album</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="albums.html">Albums</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="family.html">Family Members</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -25,18 +25,39 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h2>Welcome to Our Website</h2>
-                <p>Discover our amazing services and products that will transform your business.</p>
-                <a href="services.html" class="cta-button">Learn More</a>
+                <h2>Our Special Memories</h2>
+                <p>Take a look through our cherished family moments captured over the years.</p>
+                <a href="albums.html" class="cta-button">View Albums</a>
+            </div>
+        </section>
+
+        <section class="albums">
+            <div class="container">
+                <h3>Family Albums</h3>
+                <div class="album-list">
+                    <div class="album">
+                        <img src="album1.jpg" alt="Family Vacation 2023">
+                        <h4>Family Vacation 2023</h4>
+                    </div>
+                    <div class="album">
+                        <img src="album2.jpg" alt="Birthday Celebration">
+                        <h4>Grandma's 80th Birthday</h4>
+                    </div>
+                    <div class="album">
+                        <img src="album3.jpg" alt="Christmas 2022">
+                        <h4>Christmas 2022</h4>
+                    </div>
+                    <!-- Add more albums as needed -->
+                </div>
             </div>
         </section>
         
-        <!-- Other sections of the main content go here -->
+        <!-- Additional sections for family events or member introductions could go here -->
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 My Website. All rights reserved.</p>
+            <p>&copy; 2024 Our Family Album. All rights reserved.</p>
         </div>
     </footer>
 </body>
