--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="albums.html">Albums</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="family.html">Family Members</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -23,32 +23,17 @@
     </header>
 
     <main>
-        <section>
+        <section class="contact">
             <div class="container">
                 <h2>Get in Touch</h2>
-                <p>Feel free to reach out to us for any inquiries or collaborations.</p>
-                <form>
-                    <div>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div>
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div>
-                        <label for="message">Message:</label>
-                        <textarea id="message" name="message" rows="4" required></textarea>
-                    </div>
-                    <button type="submit">Send Message</button>
-                </form>
+                <p>If you'd like to reach out, feel free to email us at <a href="mailto:family@ourfamilyalbum.com">family@ourfamilyalbum.com</a> or call us at (555) 123-4567.</p>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 My Website. All rights reserved.</p>
+            <p>&copy; 2024 Our Family Album. All rights reserved.</p>
         </div>
     </footer>
 </body>
