--- a/albums.html
+++ b/albums.html
@@ -25,21 +25,22 @@
     <main>
         <section class="albums">
             <div class="container">
-                <h2>Our Albums</h2>
-                <div class="album-list">
-                    <div class="album">
+                <h2>Our Family Photos</h2>
+                <div class="photo-gallery">
+                    <!-- Add your images here -->
+                    <div class="photo">
                         <img src="album1.jpg" alt="Family Vacation 2023">
-                        <h3>Family Vacation 2023</h3>
+                        <p>Family Vacation 2023</p>
                     </div>
-                    <div class="album">
+                    <div class="photo">
                         <img src="album2.jpg" alt="Birthday Celebration">
-                        <h3>Grandma's 80th Birthday</h3>
+                        <p>Grandma's 80th Birthday</p>
                     </div>
-                    <div class="album">
+                    <div class="photo">
                         <img src="album3.jpg" alt="Christmas 2022">
-                        <h3>Christmas 2022</h3>
+                        <p>Christmas 2022</p>
                     </div>
-                    <!-- Add more albums as needed -->
+                    <!-- Add more photos as needed -->
                 </div>
             </div>
         </section>
