--- a/albums.html
+++ b/albums.html
@@ -114,7 +114,7 @@
         <div class="container">
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="photo1.jpg" alt="Family Photo 1">
+                    <img src="p1.jpg" alt="Family Photo 1">
                 </div>
                 <div class="gallery-item">
                     <img src="photo2.jpg" alt="Family Photo 2">
