--- a/albums.html
+++ b/albums.html
@@ -117,7 +117,7 @@
                     <img src="p1.jpg" alt="Family Photo 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="photo2.jpg" alt="Family Photo 2">
+                    <img src="photo2.jpg" alt="p1.jpg">
                 </div>
                 <div class="gallery-item">
                     <img src="photo3.jpg" alt="Family Photo 3">
