--- a/albums.html
+++ b/albums.html
@@ -117,12 +117,29 @@
                     <img src="images/p1.jpg" alt="Family Photo 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="photo2.jpg" alt="p1.jpg">
+                    <img src="images/p2.jpg" alt="Family Photo 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="photo3.jpg" alt="Family Photo 3">
+                    <img src="images/p3.jpg" alt="Family Photo 3">
                 </div>
-                <!-- Add more images as needed -->
+                <div class="gallery-item">
+                    <img src="images/p1.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p2.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p3.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p1.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p2.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p3.jpg" alt="Family Photo 3">
+                </div><!-- Add more images as needed -->
             </div>
         </div>
     </main>
