--- a/albums.html
+++ b/albums.html
@@ -123,22 +123,49 @@
                     <img src="images/p3.jpg" alt="Family Photo 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/p1.jpg" alt="Family Photo 1">
+                    <img src="images/p4.jpg" alt="Family Photo 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/p2.jpg" alt="Family Photo 2">
+                    <img src="images/p5.jpg" alt="Family Photo 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/p3.jpg" alt="Family Photo 3">
+                    <img src="images/p6.jpg" alt="Family Photo 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/p1.jpg" alt="Family Photo 1">
+                    <img src="images/p7.jpg" alt="Family Photo 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/p2.jpg" alt="Family Photo 2">
+                    <img src="images/p8.jpg" alt="Family Photo 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/p3.jpg" alt="Family Photo 3">
+                    <img src="images/p9.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p10.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p11.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p12.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p13.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p14.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p6.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p15.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p16.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p17.jpg" alt="Family Photo 3">
                 </div><!-- Add more images as needed -->
             </div>
         </div>
