--- a/family.html
+++ b/family.html
@@ -27,10 +27,10 @@
             <div class="container">
                 <h2>Our Family Members</h2>
                 <ul>
-                    <li><strong>John:</strong> The family patriarch and the life of the party.</li>
-                    <li><strong>Mary:</strong> The heart and soul of the family.</li>
-                    <li><strong>Alex:</strong> The tech-savvy adventurer of the family.</li>
-                    <li><strong>Emily:</strong> The creative and artistic member.</li>
+                    <li><strong>Helen:</strong> The family patriarch and the life of the party.</li>
+                    <li><strong>Marie:</strong> The heart and soul of the family.</li>
+                    <li><strong>Daniel:</strong> The tech-savvy adventurer of the family.</li>
+                    <li><strong>Madison:</strong> The creative and artistic member.</li>
                     <!-- Add more family members as needed -->
                 </ul>
             </div>
