--- a/albums.html
+++ b/albums.html
@@ -147,6 +147,168 @@
                     <img src="images/p11.jpg" alt="Family Photo 2">
                 </div>
                 <div class="gallery-item">
+                    <img src="images/p13.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p14.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p15.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p16.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p17.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p18.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p19.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p20.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p21.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p22.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p23.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p24.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p25.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p26.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p27.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p28.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p29.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p30.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p31.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p32.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p33.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p34.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p35.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p36.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p37.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p38.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p39.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p40.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p41.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p42.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p43.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p44.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p45.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p46.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p47.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p48.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p49.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p50.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p51.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p52.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p53.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p54.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p55.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p56.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p57.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p58.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p59.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p60.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p61.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p7.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p8.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p9.jpg" alt="Family Photo 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p10.jpg" alt="Family Photo 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/p11.jpg" alt="Family Photo 2">
+                </div>
+                <div class="gallery-item">
                     <img src="images/p12.jpg" alt="Family Photo 3">
                 </div>
                 <div class="gallery-item">
