--- a/contact.html
+++ b/contact.html
@@ -26,14 +26,14 @@
         <section class="contact">
             <div class="container">
                 <h2>Get in Touch</h2>
-                <p>If you'd like to reach out, feel free to email us at <a href="mailto:family@ourfamilyalbum.com">family@ourfamilyalbum.com</a> or call us at (555) 123-4567.</p>
+                <p>If you'd like to reach out, feel free to email us at <a href="mailto:dan.gaudreault87@gmail.com">dan.gaudreault87@gmail.com</a> or call us at (514) 291-8701.</p>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Our Family Album. All rights reserved.</p>
+            <p>&copy; 2025 Our Family Album. All rights reserved.</p>
         </div>
     </footer>
 </body>
