--- a/family.html
+++ b/family.html
@@ -31,6 +31,8 @@
                     <li><strong>Marie:</strong> The heart and soul of the family.</li>
                     <li><strong>Daniel:</strong> The tech-savvy adventurer of the family.</li>
                     <li><strong>Madison:</strong> The creative and artistic member.</li>
+                    <li><strong>Katie:</strong> The creative and artistic member.</li>
+                    <li><strong>Micheal:</strong> The creative and artistic member.</li>
                     <!-- Add more family members as needed -->
                 </ul>
             </div>
@@ -39,7 +41,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Our Family Album. All rights reserved.</p>
+            <p>&copy; 2025 Our Family Album. All rights reserved.</p>
         </div>
     </footer>
 </body>
