--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Family Album</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/main logo 2.png"> <!-- Updated Favicon -->
+    <!-- For iOS -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png">
+    <!-- For Android -->
 </head>
 <body>
     <header>
