--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Our Family Album. All rights reserved.</p>
-            <p>Made with ❤️ by [Your Name]</p>
+            <p>Made with ❤️ by Daniel Gaudreault</p>
         </div>
     </footer>
 </body>
