--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to Our Family Album</h1>
+            <!-- Logo and Title -->
+            <div class="logo-title">
+                <img src="images/main-logo-2.png" alt="Our Family Album Logo" class="logo">
+                <h1>Welcome to Our Family Album</h1>
+            </div>
             <nav aria-label="Main Navigation">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -77,7 +81,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Our Family Album. All rights reserved.</p>
-            <p>Made with ❤️ by Daniel Gaudreault</p>
+            <p>Made with ❤️ by [Your Name]</p>
         </div>
     </footer>
 </body>
