--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A digital album of our family's cherished memories and moments.">
     <link rel="stylesheet" href="styles.css">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/main-logo-2.png">
+    <link rel="icon" type="image/png" href="images/main logo 2.png">
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png">
     <!-- Android Favicon -->
@@ -81,7 +81,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Our Family Album. All rights reserved.</p>
-            <p>Made with ❤️ by [Your Name]</p>
+            <p>Made with ❤️ by Daniel Gaudreault</p>
         </div>
     </footer>
 </body>
