--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <!-- Logo and Title -->
             <div class="logo-title">
-                <img src="images/main-logo-2.png" alt="Our Family Album Logo" class="logo">
+                <img src="images/main logo 2.png" alt="Our Family Album Logo" class="logo">
                 <h1>Welcome to Our Family Album</h1>
             </div>
             <nav aria-label="Main Navigation">
