--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Android Favicon -->
     <link rel="icon" type="image/png" sizes="192x192" href="images/icons/android-chrome-192x192.png">
     <!-- Preload Images for Better Performance -->
-    <link rel="preload" href="album1.jpg" as="image">
+    <link rel="preload" href="album1.jpg" as="images/p28.jpg">
     <link rel="preload" href="album2.jpg" as="image">
     <link rel="preload" href="album3.jpg" as="image">
 </head>
