--- a/albums.html
+++ b/albums.html
@@ -18,7 +18,7 @@
         <div class="container">
             <!-- Logo and Title -->
             <div class="logo-title">
-                <img src="images/main%20logo%202.png" alt="Our Family Album Logo" class="logo">
+                <img src="images/main logo 2.png" alt="Our Family Album Logo" class="logo">
                 <h1>Our Family Album</h1>
             </div>
             <nav aria-label="Main Navigation">
