--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h4>Family Vacation 2023</h4>
                     </div>
                     <div class="album">
-                        <img src="album2.jpg" alt="Grandma's 80th Birthday Celebration" loading="lazy">
+                        <img src="images/p28.jpg" alt="Grandpa's 50th Birthday Celebration" loading="lazy">
                         <h4>Grandma's 80th Birthday</h4>
                     </div>
                     <div class="album">
