--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="album">
                         <img src="images/p28.jpg" alt="Grandpa's 50th Birthday Celebration" loading="lazy">
-                        <h4>Grandma's 80th Birthday</h4>
+                        <h4>Grandpa's 50th Birthday</h4>
                     </div>
                     <div class="album">
                         <img src="album3.jpg" alt="Christmas 2022 Family Gathering" loading="lazy">
